# shaarpy-fastapi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
sharelink/: .env  __init__.py  config.py  dependencies.py  main.py  models.py
sharelink/core/: articles.py  hashed_urls.py  shaarli.py
sharelink/router/: __init__.py  feeds.py  links.py  links_daily.py  links_priv_pub.py  tags.py
sharelink/templates/: 404.html  500.html  base.html
sharelink/templates/sharelink/: links_daily.html  links_detail.html  links_form.html  links_item.html  links_list.html  links_pagination.html  links_tags.html  links_tags_cloud.html
sharelink/tests/: test_config.py  test_version.py
