[metadata]
name=sharelink
description="Share Link - 셰어 링크: Share your thoughts, links, ideas, notes. If you ever wanted Shaarli in python, that's it ^_*"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/sharelink/
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=python fastapi shaarli
version=attr: sharelink.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: WTFPL
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

project_urls =
    Documentation = https://github.com/foxmask/sharelink/wiki
    Source = https://github.com/foxmask/sharelink/
    Tracker = https://github.com/foxmask/sharelink/issues

[options]
python_requires=>=3.10
packages=find:
include_package_data=true
zip_safe=false


install_requires=
    bcrypt==4.2.0
    fastapi==0.115.4
    fastapi-csrf-protect==0.3.6
    pydantic-settings==2.6.1
    sqlmodel==0.0.22
    newspaper3k==0.2.8
    pypandoc==1.14
    pytz==2024.2
    lxml[html_clean]==5.3.0
    python-slugify==8.0.4
    python-multipart==0.0.17


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=119
exclude=.tox,build,.git
ignore = E402, F401
